@@ -4,7 +4,6 @@ Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
 - need a new jEditLauncher before the 4.1final release
-- fsb: at roots:; select something; path not prepended
 - faq:
   - several places - latest jEdit is 4.1 not 4.0
   - no longer exists - file-open with encoding menu
